[package]
name = "cyst"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
bincode = "1.3.3"
chacha20poly1305 = { version = "0.10.1", features = [ "stream" ] }
clap = { version = "4.5.23", features = [ "derive" ] }
dialoguer = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = [ "derive" ] }
ureq = "2.12.1"
